# pocket-tts-onnx-export

./: .gitignore  build.sh  export.py  music.pcm  output.pcm  readout.pcm  test.sh
mimi/: CMakeLists.txt  build.sh  mimi.cpp  output.pcm  test.sh
onnx_export/: wrappers.py
pocket_tts/: __init__.py
pocket_tts/config/: b6369a24.yaml
pocket_tts/data/: audio.py  audio_utils.py
pocket_tts/models/: flow_lm.py  mimi.py  tts_model.py
pocket_tts/modules/: conv.py  dummy_quantizer.py  mimi_transformer.py  resample.py  rope.py  seanet.py  stateful_module.py  transformer.py
pocket_tts/utils/: config.py
scripts/: export_mimi_and_conditioner.py
